# sok

./: .env.example  .gitignore  Cargo.toml  DOLT_REMOTE.md  config.json  index.html  manifest  pr-test.md
.beads/: config.yaml  interactions.jsonl  metadata.json
docs/: 00-codebase-architecture.md  01-site-map-and-url-patterns.md  02-replica-gap-analysis.md  03-frontend-javascript-behavior.md  04-implementation-decisions.md  05-template-partials-map.md  README.md  agent-handoff-validation-checklist.md  caching-hot-listing-queries.md  catalog-schema.md  lazy-hover-preview-smoke.md  local-development.md  manifest-favicon-social-metadata.md  performance-payload-smoke.md  responsive-navigation-smoke.md  template-partials.md
fixtures/: README.md  catalog_seed.json  entity_index_live_seed.json
migrations/: 0001_catalog_schema.sql  0002_align_catalog_search_thumbs.sql  0003_align_taxonomy_search_schema.sql  001_taxonomy.sql
scripts/: _wh.py  build_search_help.py  extract_video_main.py  gen_search_help.py  install_home.py  patch_categories_template.py  write_home_rs.py  write_search_help_bundle.py
src/: config.rs  db.rs  errors.rs  lib.rs  logging.rs  main.rs
templates/: categories.html  channels.html  entity_profile.html  error.html  index.html  legal_page.html  main.html  pornstars.html  search_listing.html  slug_listing.html  tags.html  video.html
tests/: ajax_add_hit_favourite.rs  ajax_cats_tags.rs  ajax_comments.rs  ajax_contracts.rs  ajax_entity_search.rs  ajax_related_videos.rs  ajax_search_help.rs  ajax_video_interactions.rs  ajax_widgets.rs  catalog_seed_fixtures.rs  category_slug_listing.rs  entity_models.rs  (+18 more)
(+165 files in other folders)
