[package]
name = "sok"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
askama = "0.12"
askama_actix = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
moka = { version = "0.12", features = ["sync"] }
lazy_static = "1.4"
dotenv = "0.15"
url = "2"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
futures-util = "0.3"
ammonia = "4"
tikv-jemallocator = "0.6"
actix-web-codegen = "4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"
